# Trainlytics

./: .gitignore  CMakeLists.txt  LICENSE  README.MD
include/cli/: Menu.h
include/models/: Exercise.h  ExerciseEntry.h  Routine.h  WorkoutLog.h
include/utils/: DateTimeUtils.h  RoutineSerializer.h  WorkoutLogSerializer.h
src/: main.cpp
src/cli/: Menu.cpp
src/models/: Exercise.cpp  Routine.cpp
src/utils/: DateTimeUtils.cpp  RoutineSerializer.cpp  WorkoutLogSerializer.cpp
tests/: test_routine.cpp
